add resource articles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>This is home pages</h1>
-<%= link_to 'about', pages_about_path %> <br>
+<div class="center jumbotron">
+	<h1>WELCOM ALPHABLOG</h1>
+	<%= link_to "sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge"%>
+</div>
+
+<%= link_to "Blog", articles_path %> || <%= link_to 'about', about_path %> <br>
